not finished yet but finished

--- a/src/Components/Home/Shared/Footer/Footer.css
+++ b/src/Components/Home/Shared/Footer/Footer.css
@@ -1,7 +1,6 @@
 .footer-area{
-    /* background-image: url(../../../../Photos/footerimg3.png); */
     background-size: cover;
-    background-color: #dfe6e9;
+    background-color: #82ccdd;
 }
 
 .footer-area li{
