--- a/src/Components/Authentication/Login/LoginDetails.css
+++ b/src/Components/Authentication/Login/LoginDetails.css
@@ -7,7 +7,7 @@
     color: #fff;
     font-size: 16px;
     letter-spacing: 1px;
-    background: #603bbb;
+    background: #6c5ce7;
     cursor: pointer;
   }
   
@@ -30,9 +30,9 @@
     justify-content: center;
     background: radial-gradient(
       ellipse at left bottom,
-      rgba(22, 24, 47, 1) 0%,
-      rgba(38, 20, 72, 0.9) 59%,
-      rgba(17, 27, 75, 0.9) 100%
+      rgba(2, 65, 28, 0.671) 0%,
+      rgba(17, 42, 19, 0.657) 59%,
+      rgba(3, 182, 48, 0.555) 100%
     );
     box-shadow: 0 50px 70px -20px rgba(0, 0, 0, 0.8);
   }
